Bug #215457 r=darin, sr=dougt, a=mkaply Move creation of event queue before component registration